--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6709,6 +6709,7 @@
     <!-- Help URL, Top level privacy settings [DO NOT TRANSLATE] -->
     <string name="help_url_privacy_dashboard" translatable="false"></string>
 
+    <string name="help_url_memtag" translatable="false"></string>
     <string name="help_url_network_dashboard" translatable="false"></string>
     <string name="help_url_connected_devices" translatable="false"></string>
     <string name="help_url_apps_and_notifications" translatable="false"></string>
@@ -8627,6 +8628,38 @@
     <string name="confirm_sim_deletion_title">Confirm SIM deletion</string>
     <!-- [CHAR LIMIT=NONE] eSim deletion confirmation description  -->
     <string name="confirm_sim_deletion_description">Verify it\u0027s you before erasing a downloaded SIM</string>
+
+    <!-- TODO(b/258550150): Finalize all strings in this section and remove translatable="false" -->
+    <!-- [CHAR LIMIT=32] Name of Advanced memory protection page in "More Security Settings" and heading of page. -->
+    <string name="memtag_title" translatable="false">Advanced memory protection</string>
+    <!-- [CHAR LIMIT=52] Label for button to turn on / off Advanced memory protection.-->
+    <string name="memtag_toggle" translatable="false">Try Advanced memory protection</string>
+    <!-- [CHAR LIMIT=NONE] Subtitle of Advanced memory protection page. -->
+    <string name="memtag_intro" translatable="false">This beta feature helps you protect your device from bugs that may put your security at risk.</string>
+    <!-- [CHAR LIMIT=NONE] Status label indicating that Advanced memory protection is on. -->
+    <string name="memtag_on" translatable="false">On</string>
+    <!-- [CHAR LIMIT=37] Status label indicating that Advanced memory protection is off. -->
+    <string name="memtag_off" translatable="false">Off</string>
+    <!-- [CHAR LIMIT=37] Status label indicating that system needs to be rebooted for Advanced memory protection to be on. -->
+    <string name="memtag_on_pending" translatable="false">On after restart</string>
+    <!-- [CHAR LIMIT=37] Status label indicating that system needs to be rebooted for Advanced memory protection to be off. -->
+    <string name="memtag_off_pending" translatable="false">Off after restart</string>
+    <!-- [CHAR LIMIT=37] Status label indicating that Advanced memory protection was forced off via remote device configuration. -->
+    <string name="memtag_force_off" translatable="false">Currently unavailable for your device.</string>
+    <!-- [CHAR LIMIT=NONE] Subtext on page to control Advanced memory protection settings. -->
+    <string name="memtag_footer" translatable="false">You\u0027ll have to restart your device to turn Advanced memory protection on or off. When it\u0027s on, you may notice slower device performance.</string>
+    <!-- [CHAR LIMIT=31] Header of dialog asking user to reboot device. -->
+    <string name="memtag_reboot_title" translatable="false">Restart device?</string>
+    <!-- [CHAR LIMIT=NONE] Message shown in dialog prompting user to reboot device to turn on Advanced memory protection.-->
+    <string name="memtag_reboot_message_on" translatable="false">You\u0027ll need to restart your device to turn on Advanced memory protection.</string>
+    <!-- [CHAR LIMIT=NONE] Message shown in dialog prompting user to reboot device to turn off Advanced memory protection.-->
+    <string name="memtag_reboot_message_off" translatable="false">You\u0027ll need to restart your device to turn off Advanced memory protection.</string>
+    <!-- [CHAR LIMIT=17] Button label in dialog prompting user to reboot device.-->
+    <string name="memtag_reboot_yes" translatable="false">Restart</string>
+    <!-- [CHAR LIMIT=17] Button label in dialog prompting user to reboot device.-->
+    <string name="memtag_reboot_no" translatable="false">Not now</string>
+    <!-- [CHAR LIMIT=NONE] Label for Learn More link. -->
+    <string name="memtag_learn_more" translatable="false">Learn more about Advanced memory protection.</string>
 
     <!-- Opening string on the dialog that prompts the user to confirm that they really want to delete their existing work profile. The administration app icon and name appear after the final colon. [CHAR LIMIT=NONE] -->
     <string name="opening_paragraph_delete_profile_unknown_company">This work profile is managed by:</string>
